--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">About Us</div>
-                        <h1 class="display-6 mb-5">Mission</h1>
+                        <h1 class="display-6 mb-5">Mission 2nd year</h1>
                       
                         <p class="mb-5">We focus on creating an ecosystem which will foster the culture of
                             Innovation across educational institutions from ideas generation to pre-incubation,
