--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                            <img class="position-absolute " style="width:100%; border-radius:5px" src="img/team.jpg"
+                            <img class="position-absolute " style="width:100%; border-radius:5px" src="img/team/team.jpg"
                                 alt="" style="object-fit: cover;">
 
                         </div>
@@ -112,7 +112,7 @@
                 <p class="mb-5" style="color: white;">Our Mentors who were with us and guided us, we will never forget thier contribution.</p>
             </div>
             <div class="container hall" style="margin-top:80px">
-                <h1 class=" teams_name">BATCH 2022</h1>
+                <h1 class=" teams_name">BATCH 22' & 23'</h1>
                 <div class="row justify-content-center text-center">
                     <div class="">
                         <div class="owl-carousel owl-theme" id="staff4">
@@ -147,6 +147,77 @@
                                     </figcaption>
                                   </figure>
                             </div>
+                            <div class="item">
+                              <figure class="snip1113"><img src="img/team/team_members/shubhampathak.jpg" alt="pr-sample9" />
+                                  <figcaption>
+                                    <h3>Shubham <span> Pathak</span></h3>
+                                    <h4>
+                                      Team Head
+                                    </h4>
+                                    <h5>Design,Research & Development</h5>
+                                    
+                                  </figcaption>
+                                </figure>
+                          </div>
+                          <div class="item">
+                              <figure class="snip1113 red">
+                                  <img src="img/team/team_members/inzmamulHaque.jpg" alt="pr-sample1" />
+                                  <figcaption>
+                                    <h3>Inzmamul <span>Haque</span></h3>
+                                    <h4> 
+                                      Team Head
+                                    </h4>
+                                    <h5>Finance</h5>
+                                  </figcaption>
+                                </figure>
+                          </div>
+                          <div class="item">
+                              <figure class="snip1113 blue hover"><img src="img/team/team_members/reeshekpathak.jpg" alt="pr-sample3" />
+                                  <figcaption>
+                                    <h3>Risheek <span>Pathak</span></h3>
+                                    <h4> 
+                                      Team Head 
+                                    </h4>
+                                    <h5>Corporate & Public Relations</h5>
+                                  </figcaption>
+                                </figure>
+                          </div>
+                        <div class="item">
+                          <figure class="snip1113 red">
+                              <img src="img/team/team_members/santriptiverma.jpg" alt="pr-sample1" />
+                              <figcaption>
+                                <h3>Santripti <span>Verma</span></h3>
+                                <h4> 
+                                  Team Head 
+                                </h4>
+                                <h5>Content & Records</h5>
+                              </figcaption>
+                            </figure>
+                      </div>
+                      <div class="item">
+                        <figure class="snip1113 red">
+                            <img src="img/team/team_members/ankit.jpg" alt="pr-sample1" />
+                            <figcaption>
+                              <h3>Ankit <span>Shukla</span></h3>
+                              <h4> 
+                                Team Head 
+                              </h4>
+                              <h5> Event Management</h5>
+                            </figcaption>
+                          </figure>
+                    </div>
+                    <div class="item">
+                      <figure class="snip1113 red">
+                          <img src="img/team/team_members/vrinda.jpg" alt="pr-sample1" />
+                          <figcaption>
+                            <h3>Vrinda <span>Gupta</span></h3>
+                            <h4> 
+                              Team Head 
+                            </h4>
+                            <h5>Entrepreneurship</h5>
+                          </figcaption>
+                        </figure>
+                       </div>
                             <!-- <div class="item">
                                 <figure class="snip1113"><img src="img/PP/Sakshee.jpg" alt="pr-sample9" />
                                     <figcaption>
