Changes in Entrepreneurship index.html
various contents are added

--- a/entrepreneurship/index.html
+++ b/entrepreneurship/index.html
@@ -136,7 +136,7 @@
           <h1>Have A Startup Idea ? </h1>
           <h2>We are here to help you and incubate your idea</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Contact Us</a>
+            <a href="#contact" class="btn-get-started scrollto">Contact Us</a>
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
@@ -199,9 +199,10 @@
               
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> We provide mentorship and connect you with the vast alumni network of the college.</li>
-              <li><i class="ri-check-double-line"></i> We provide you space to tinker with ideas.</li>
-              <li><i class="ri-check-double-line"></i> We connect you with investors and arrange fundings.</li>
+              <li><i class="ri-check-double-line"></i>Gain access to top-notch mentorship programs where we connect you with seasoned mentors. Our extensive alumni network further amplifies your learning experience and opens doors to invaluable connections.</li>
+              <li><i class="ri-check-double-line"></i> Unleash your creativity in our dedicated spaces designed to nurture and develop your ideas. We provide an environment where innovation thrives, allowing your startup to flourish.</li>
+              <li><i class="ri-check-double-line"></i> We actively facilitate funding arrangements, ensuring that your startup receives the financial backing it requires to succeed. </li>
+              <li><i class="ri-check-double-line"></i> Benefit from a dedicated support team that is committed to understanding your startup's unique needs. Our team works closely with you, providing personalized assistance throughout your incubation journey.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
@@ -276,7 +277,7 @@
 
         <div class="row">
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-            <img src="./assets/img/different-sectors.png" class="img-fluid" alt="">
+            <img src="./assets/img/IS2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Our reach in varoius sectors</h3>
@@ -324,7 +325,7 @@
 
         <div class="section-title">
           <h2>How we will be helping you?</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Join us on a journey to boost your projects. We help you get funds, offer expert advice, provide collaborative workspaces, and connect you with interns, supporting your vision and encouraging innovation at every stage.</p>
         </div>
 
         <div class="row">
@@ -372,7 +373,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Feel Free to contact us</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> "Feel free to contact us with any questions, ideas, or inquiries. Our team at the Innovation and Incubation Cell is here to assist you on your innovation and entrepreneurial endeavors. Your input matters, and we look forward to hearing from you!"</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Contact Us</a>
@@ -388,7 +389,7 @@
 
         <div class="section-title">
           <h2>StartUps Incubated By us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> <strong> Discover inspiring stories of startups we've helped bring to life. Be part of our community and let your startup be the next success in our incubation journey.</strong></p>
         </div>
 <!-- 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -489,9 +490,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/startups/abrossa.logo.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Verdant Motors Private Limited </h4>
-              <p>We make electric Two wheeler 
-              <a href="http://www.verdantmotors.com" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>ABROSAA </h4>
+              <p>🌿 Handcrafted Jujube Delights
+                Wholesome Treasures, Made with Love ❤️
+              <a href="https://abrosaa.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -505,52 +507,54 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Navigate your journey with ease! Explore our Frequently Asked Questions (FAQs) section for quick insights into our Innovation and Incubation Cell. <br>
+             <strong>Have a question? Find it here</strong>
+            </p>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">What support does the Innovation and Incubation Cell offer? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Our cell provides comprehensive support, including funding opportunities, expert mentorship, collaborative workspaces, and access to interns, fostering a dynamic environment for innovation.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">How can I apply for incubation for my startup? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  To apply, visit our website and contact us.We carefully review each application to identify promising ventures.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Are there any eligibility criteria for startups seeking incubation? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  While criteria may vary, we generally look for innovative ideas, a viable business plan, and a dedicated team.Contact Us for more details.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Is there financial support available for startups? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Yes, we offer financial support in the form of grants and funding. Our goal is to help startups overcome financial barriers and thrive.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Can I apply for incubation if my startup is still in the idea stage? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  Yes, we encourage early-stage startups with innovative ideas to apply. Contact us for guidance on submitting your application.
                 </p>
               </div>
             </li>
@@ -567,7 +571,13 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Get in touch with our Innovation and Incubation Cell for great collaboration opportunities, expert guidance, and active support in your entrepreneurial journey.  
+            <br> 
+            <strong>
+             Connect with us today!
+             </strong>
+            </p>
         </div>
 
         <div class="row">
@@ -577,13 +587,14 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Kanpur Road, NH-25, Bundelkhand, Jhansi, Uttar Pradesh 284128</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>iic.bietjhansi@gmail.com</p>
+                
               </div>
 
               <div class="phone">
@@ -592,7 +603,7 @@
                 <p>+1 5589 55488 55s</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d461107.29042369826!2d78.0298657890625!3d25.458292000000007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3977770359cddd07%3A0x4a954a1b09476b78!2sInnovation%20and%20Incubation%20Cell%2C%20BIET%20Jhansi!5e0!3m2!1sen!2sin!4v1703336623126!5m2!1sen!2sin" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
