5)Changes in  index.html
Added new Director image,description and removed errors

--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
           
             <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="img/home/pmpandey.jpg"
+                    <img src="img/home/Deependra.jpeg"
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0); ;">
                 </div>
                 <div class="col-lg-6 wow " data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
-                            <h5 class="display-6" style="text-align: right;">Prof. Deependra</h5>
+                            <h5 class="display-6" style="text-align: right;">Prof. Deependra Singh</h5>
                             <h2 style="color: rgb(0, 0, 0);text-align: right;">Director</h2>
-                            <p class="text-hover" style="text-align:justify">  Institute of
-                                Engineering and Technology (BIET) Jhansi since 28th August 2021.
-                                He is a well known Mechanical Engineer in India. Prof. Pandey
-                                earned his M.Tech and Ph.D from IIT Kanpur, B.Tech from HBTI now
-                                HBTU Kanpur. He has produced so far 40 Ph.Ds, supervised 37
-                                M.Tech dissertations. Apart from this, he has published 22 patents
-                                and 3 patents are granted. He has a strong quality research
-                                publications in journals of repute. Prof. Pandey has rich experience
-                                in the field of academics, research and now leading BIET with strong
-                                administrative abilities. The method to formt the quality to.
+                            <p class="text-hover" style="text-align:justify">  Joined Bundelkhand Institute of Engineering and Technology (BIET) Jhansi
+                                on 7 November 2023. He is a well-known Electrical  Engineer and Professor
+                                in India. He was also selected as Lecturer in Higher College of Technology,
+                                Muscat, Oman (Saudi Arabia) for an year. Prof. Singh earned his PHD from 
+                                U P Technical University, Lucknow, M.E. from IIT Roorkee and  B.Tech from 
+                                HBTI (now HBTU) Kanpur. He has supervised 10 M.Tech and 15 B.Tech projects.
+                                Apart from this, he has published 12 International and 4 National Journals.
+                                He has a strong quality research in publications of reputed journals. Prof.
+                                Singh has rich experience in the fields of academics, research and now 
+                                leading BIET with his strong administrative qualities.
                             </p>
 
                         </div>
@@ -238,7 +238,7 @@
                     <div class="col-md-3" style="text-align: center;">
                         <h1
                             style="color: rgb(255,255,255);font-size: 95px;font-family: 'Work Sans', sans-serif;height: 91.6px;">
-                            <strong id="nbr">15</strong></h1>
+                            <strong id="nbr">26</strong></h1>
                         <h4
                             style="color: rgb(255,255,255);font-size: 22px;font-family: 'Work Sans', sans-serif;padding-top: 10px;">
                             Start-ups Incubated</h4>
@@ -246,7 +246,7 @@
                     <div class="col-md-3" style="text-align: center;">
                         <h1
                             style="color: rgb(255,255,255);font-size: 95px;font-family: 'Work Sans', sans-serif;height: 91.6px;">
-                            <strong id="nbr2">20</strong></h1>
+                            <strong id="nbr2">55+</strong></h1>
                         <h4
                             style="color: rgb(255,255,255);font-size: 22px;font-family: 'Work Sans', sans-serif;padding-top: 10px;">
                             Events Conducted</h4>
@@ -254,7 +254,7 @@
                     <div class="col-md-3" style="text-align: center;">
                         <h1
                             style="color: rgb(255,255,255);font-size: 95px;font-family: 'Work Sans', sans-serif;height: 91.6px;">
-                            <strong id="nbr3">13</strong></h1>
+                            <strong id="nbr3">35</strong></h1>
                         <h4
                             style="color: rgb(255,255,255);font-size: 22px;font-family: 'Work Sans', sans-serif;padding-top: 10px;">
                             Trainings done</h4>
@@ -262,7 +262,7 @@
                     <div class="col-md-3" style="text-align: center;">
                         <h1
                             style="color: rgb(255,255,255);font-size: 95px;font-family: 'Work Sans', sans-serif;height: 91.6px;">
-                            <strong id="nbr4">60</strong></h1>
+                            <strong id="nbr4">85+</strong></h1>
                         <h4
                             style="color: rgb(255,255,255);font-size: 22px;font-family: 'Work Sans', sans-serif;padding-top: 10px;">
                             Expert Team</h4>
