6)Added events in other events -index.html
added various events in other events page

--- a/other-events/index.html
+++ b/other-events/index.html
@@ -75,74 +75,74 @@
 
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/sandeepjain (2).jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Career Guidance Session</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Sandeep Jain(CE0 of GFG)</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/Municipal.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Expert Talk Session By Municipal Commisioner</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Pulkit Garg(IAS)</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/Arshgoel.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Expert Talk Session</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Arsh Goel</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/Dynapt.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Expert Talk Session</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Mukul k Gupta</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/junaid.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Motivational Session </h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Jundaid Ahmed</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/SIH.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Guidance Session for Smart India Hackathon</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Winner Team of SIH'22</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/VC.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Session on Angel Investing and VC Funcding</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Rachit Rawat</h6>
                 </div>
             </div>
             <div class="project">
                 <div class="overlay"></div>
-                <img src="../other-events/img/1oct.jpg" alt="">
+                <img src="../other-events/img/BuisnessmodelWebinar.jpg" alt="">
                 <div class="content">
-                    <h2>Intellactual property right awareness</h2>
-                    <h5 style="color: white;">4th June 2022</h5>
-                    <h6>By Rajesh kumar Mina</h6>
+                    <h2>Workshop on Buisness Model Canvas</h2>
+                    <!-- <h5 style="color: white;">4th June 2022</h5> -->
+                    <h6>By Mr. Tarun Dwivedi</h6>
                 </div>
             </div>
           
