Fixed navbar reposiveness

--- a/other-events/index.html
+++ b/other-events/index.html
@@ -17,7 +17,7 @@
    
 
     
-    <title>IIC | Event | Other events</title>
+    <title>Events</title>
 
     <!-- Favicon -->
     <link href="../img/favicon.png" rel="icon">
@@ -167,6 +167,16 @@
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
+<!-- custom navbar toggle javascript  -->
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script>
+    $(document).ready(function() {
+        // Custom Navbar Toggle
+        $("#customNavbarToggle").click(function() {
+            $("#navbarCollapse").toggleClass("show");
+        });
+    });
+</script>
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
