--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
             contribution.</p>
     </div>
     <div class="container hall" style="margin-top:80px">
-        <h1 class=" teams_name">BATCH 2022</h1>
+        <h1 class=" teams_name">Eminent Past Members</h1>
         <div class="row justify-content-center text-center">
             <div class="">
                 <div class="owl-carousel owl-theme" id="staff4">
