--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type = module src="headLinks.js"></script>
     <!-- header and footer -->
     <script type = module src="HeaderFooter.js"></script>
+    <link rel="shortcut icon" href="img\favicon.png" type="image/x-icon">
 
     <head-links></head-links>
 
