--- a/about.html
+++ b/about.html
@@ -2376,7 +2376,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                     <div class="item">
                         <figure class="snip1113"><img src="img\PP F\IMG-20220301-WA0068.jpg" alt="pr-sample9" />
                             <figcaption>
-                                <h3>KM <span>Vaishnavi</span></h3>
+                                <h3>KM <span>Hemang</span></h3>
                                 <h4>
                                     Member
                                 </h4>
