--- a/about.html
+++ b/about.html
@@ -2374,7 +2374,7 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
                         </figure>
                     </div>
                     <div class="item">
-                        <figure class="snip1113"><img src="img\PP F\IMG-20220301-WA0068.jpg" alt="pr-sample9" />
+                        <figure class="snip1113"><img src="img\PP F\hemang.jpg" alt="pr-sample9" />
                             <figcaption>
                                 <h3>KM <span>Hemang</span></h3>
                                 <h4>
