--- a/entrepreneurship/index.html
+++ b/entrepreneurship/index.html
@@ -615,7 +615,7 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+<!--           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -642,8 +642,37 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+          </div> -->
+<!--           new contact us to store data in google sheet -->
+  <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="https://script.google.com/macros/s/AKfycbyuWFLEakUtJav_0qMFpp_f1UTlOgjhb4oMf4wtH036ZFmI_T1af9yDTAOy9eGHHvQ/exec" method="post" role="form" class="php-email-form" name ="contact-form" id="contact-form">
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label for="name">Your Name</label>
+                  <input type="text" name="User-Name" class="form-control" id="name" required>
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Your Email</label>
+                  <input type="email" class="form-control" name="User-Email" id="email" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Subject</label>
+                <input type="text" class="form-control" name="User-Subject" id="subject" required>
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea class="form-control" name="User-Message" rows="10" required></textarea>
+              </div>
+              <!-- <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div> -->
+              <div class="text-center"><button type="submit" value=""
+                id="submit" >Send Message</button></div>
+            </form>
           </div>
-
         </div>
 
       </div>
