--- a/entrepreneurship/index.html
+++ b/entrepreneurship/index.html
@@ -61,6 +61,7 @@
      <link href="../css/style.css" rel="stylesheet">
        <!-- header and footer -->
        <script type = module src="../HeaderFooter.js"></script>
+       <script src="assets/js/datacollect.js"></script>
 
 
 </head>
