--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="spinner-grow text-primary" role="status"></div>
 </div>
 <!-- Spinner End -->
-
+y
 <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
@@ -452,27 +452,27 @@
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="text" name="User-Name" class="form-control" id="name" placeholder="Your Name">
+                                            <input type="text" name="User-Name" class="form-control" id="name" placeholder="Your Name" required>
                                             <label for="name">Your Name</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <input type="email" name="User-Email" class="form-control" id="email"
-                                                placeholder="Your Email">
+                                                placeholder="Your Email" required>
                                             <label for="email">Your Email</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
-                                            <input type="text" name="User-Subject" class="form-control" id="subject" placeholder="Subject">
+                                            <input type="text" name="User-Subject" class="form-control" id="subject" placeholder="Subject" required>
                                             <label for="subject">Subject</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <textarea name="User-Message"class="form-control" placeholder="Leave a message here"
-                                                id="message" style="height: 100 px"></textarea>
+                                                id="message" style="height: 100 px" required></textarea>
                                             <label for="message">Message</label>
                                         </div>
                                     </div>
